Configurable title field

--- a/src/config/engine.json.example
+++ b/src/config/engine.json.example
@@ -3,9 +3,10 @@
   "hostIdentifier": "host-XXXXX",
   "searchKey": "search-XXXXXXXXXXXXXXXXXXXXXXX",
   "fields": [
-    "license",
-    "name",
-    "repository",
+    "title",
+    "anotherField",
+    "someField",
     "created"
-  ]
+  ],
+  "titleField": "title"
 }
