Refactored Sort Container

--- a/src/config/engine.json.example
+++ b/src/config/engine.json.example
@@ -12,5 +12,9 @@
   "titleField": "title",
   "urlField": "url",
   "urlFieldTemplate": "http://www.example.com/{{id}}",
+  "sortFields": [
+    "title",
+    "anotherField"
+  ]
   "facets": ["anotherField", "someField"]
 }
