--- a/package.json
+++ b/package.json
@@ -24,7 +24,15 @@
     "postinstall": "npm-run-all build-css"
   },
   "devDependencies": {
+    "enzyme": "^3.4.4",
+    "enzyme-adapter-react-16": "^1.2.0",
+    "enzyme-to-json": "^3.3.4",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
