Added ensure_engine_config.sh script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,5 +33,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
+      - run: ./bin/ensure
+
       # run tests!
       - run: npm test
