Refactored to use search-ui

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@elastic/react-search-ui": "file:../search-ui/packages/react-search-ui",
+    "@elastic/search-ui-app-search-connector": "file:../search-ui/packages/search-ui-app-search-connector",
     "date-fns": "^1.29.0",
     "history": "^4.7.2",
     "prop-types": "^15.6.2",
