Made query suggestion fields optional

--- a/src/config/engine.json.example
+++ b/src/config/engine.json.example
@@ -9,6 +9,9 @@
     "someField",
     "created"
   ],
+  "querySuggestFields": [
+    "title"
+  ],
   "titleField": "title",
   "urlField": "url",
   "urlFieldTemplate": "http://www.example.com/{{id}}",
