--- a/src/config/engine.json.example
+++ b/src/config/engine.json.example
@@ -2,22 +2,12 @@
   "engineName": "your-engine-name",
   "hostIdentifier": "host-XXXXX",
   "searchKey": "search-XXXXXXXXXXXXXXXXXXXXXXX",
-  "fields": [
-    "id",
-    "title",
-    "anotherField",
-    "someField",
-    "created"
-  ],
-  "querySuggestFields": [
-    "title"
-  ],
+  "searchFields": ["title", "description"],
+  "resultFields": ["id", "title", "anotherField", "someField", "created"],
+  "querySuggestFields": ["title"],
   "titleField": "title",
   "urlField": "url",
   "urlFieldTemplate": "http://www.example.com/{{id}}",
-  "sortFields": [
-    "title",
-    "anotherField"
-  ],
+  "sortFields": ["title", "anotherField"],
   "facets": ["anotherField", "someField"]
 }
