--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@elastic/react-search-ui": "^0.12.1",
+    "@elastic/search-ui-app-search-connector": "^0.12.1",
     "date-fns": "^1.29.0",
     "history": "^4.7.2",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "rc-pagination": "^1.16.5",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-scripts": "3.0.1",
     "swiftype-app-search-javascript": "^2.3.0"
   },
