--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "rc-pagination": "^1.16.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4",
+    "react-scripts": "3.0.1",
     "swiftype-app-search-javascript": "^2.3.0"
   },
   "scripts": {
@@ -29,12 +29,18 @@
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
     "enzyme-to-json": "^3.3.4",
-    "node-sass-chokidar": "^1.3.3",
+    "node-sass-chokidar": "^1.3.5",
     "npm-run-all": "^4.1.3"
   },
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ]
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
