--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "start-dev": "npm-run-all -p watch-css start",
-    "build-js": "react-scripts build",
+    "build-js": "node ./scripts/build-no-chunks.js",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -32,7 +32,8 @@
     "enzyme-adapter-react-16": "^1.2.0",
     "enzyme-to-json": "^3.3.4",
     "node-sass-chokidar": "^1.3.5",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "rewire": "^4.0.1"
   },
   "jest": {
     "snapshotSerializers": [
