--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "@elastic/react-search-ui": "^0.12.1",
+    "@elastic/search-ui-app-search-connector": "^0.12.1",
     "date-fns": "^1.29.0",
     "history": "^4.7.2",
     "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "rc-pagination": "^1.16.5",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-scripts": "3.0.1",
     "swiftype-app-search-javascript": "^2.3.0"
   },
@@ -19,9 +21,9 @@
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "start-dev": "npm-run-all -p watch-css start",
-    "build-js": "react-scripts build",
+    "build-js": "node ./scripts/build-no-chunks.js",
     "build": "npm-run-all build-css build-js",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "npm-run-all build-css"
   },
@@ -30,7 +32,8 @@
     "enzyme-adapter-react-16": "^1.2.0",
     "enzyme-to-json": "^3.3.4",
     "node-sass-chokidar": "^1.3.5",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "rewire": "^4.0.1"
   },
   "jest": {
     "snapshotSerializers": [
