Updated the license

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app-search-reference-ui-react",
   "version": "1.2.0",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "private": true,
   "dependencies": {
     "@elastic/react-search-ui": "^0.12.1",
