--- a/src/config/engine.json.example
+++ b/src/config/engine.json.example
@@ -1,4 +1,5 @@
 {
+  "endpointBase": "http://127.0.0.1:3002",
   "engineName": "your-engine-name",
   "hostIdentifier": "host-XXXXX",
   "searchKey": "search-XXXXXXXXXXXXXXXXXXXXXXX",
