--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "Apache-2.0",
   "private": true,
   "dependencies": {
-    "@elastic/react-search-ui": "^1.3.3",
-    "@elastic/search-ui-app-search-connector": "^1.3.3",
+    "@elastic/react-search-ui": "1.4.1",
+    "@elastic/search-ui-app-search-connector": "1.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
