--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -26,7 +26,7 @@
     "enzyme": "^3.4.4",
     "enzyme-adapter-react-16": "^1.2.0",
     "enzyme-to-json": "^3.3.4",
-    "node-sass-chokidar": "^1.3.5",
+    "node-sass-chokidar": "^1.4.0",
     "npm-run-all": "^4.1.3",
     "rewire": "^4.0.1"
   },
