--- a/src/config/engine.json.example
+++ b/src/config/engine.json.example
@@ -8,6 +8,7 @@
   "querySuggestFields": ["title"],
   "titleField": "title",
   "urlField": "url",
+  "thumbnailField": "imageUrl",
   "sortFields": ["title", "anotherField"],
   "facets": ["anotherField", "someField"]
 }
