--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "app-search-reference-ui-react",
-  "version": "1.2.0",
-  "license": "Apache-2.0",
+  "version": "1.6.0",
   "private": true,
   "dependencies": {
-    "@elastic/react-search-ui": "1.7.0",
-    "@elastic/search-ui-app-search-connector": "1.7.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-scripts": "^3.4.1"
+    "@elastic/react-search-ui": "^1.9.0",
+    "@elastic/search-ui-app-search-connector": "^1.9.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "5.0.0"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "rewire": "^6.0.0",
+    "node-sass-chokidar": "^1.5.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -22,26 +25,24 @@
     "eject": "react-scripts eject",
     "postinstall": "npm-run-all build-css"
   },
-  "devDependencies": {
-    "enzyme": "^3.4.4",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.3.4",
-    "node-sass-chokidar": "^1.5.0",
-    "npm-run-all": "^4.1.3",
-    "rewire": "^4.0.1"
-  },
-  "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
     ]
   },
-  "browserslist": [
-    ">0.2%",
-    "chrome 44",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "engines": {
     "node": "14.17.0"
   }
