--- a/package.json
+++ b/package.json
@@ -10,20 +10,14 @@
     "react-scripts": "5.0.0"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "rewire": "^6.0.0",
-    "node-sass-chokidar": "^1.5.0"
+    "rewire": "^6.0.0"
   },
   "scripts": {
-    "build-css": "node-sass-chokidar src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
-    "start-dev": "npm-run-all -p watch-css start",
     "build-js": "node ./scripts/build-no-chunks.js",
-    "build": "npm-run-all build-css build-js",
+    "build": "build-js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "npm-run-all build-css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
