--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@elastic/react-search-ui": "^1.9.0",
     "@elastic/search-ui-app-search-connector": "^1.9.0",
+    "dotenv": "^16.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0"
